--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1 id="header">Drumkit</h1>
+    <div id="boxes">
+        <div id="box1">Box 1</div>
+        <div id="box2">Box 2</div>
+        <div id="box3">Box 3</div>
+        <div id="box4">Box 4</div>
+        <div id="box5">Box 5</div>
+        <div id="box6">Box 6</div>
+        <div id="box7">Box 7</div>
+        <div id="box8">Box 8</div>
+        <div id="box9">Box 9</div>
+    </div>
     
     <script src="./script.js"></script>
 </body>
