--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <h1 id="header">Drumkit</h1>
     <div id="boxes">
-        <div id="box1">Box 1</div>
-        <div id="box2">Box 2</div>
-        <div id="box3">Box 3</div>
-        <div id="box4">Box 4</div>
-        <div id="box5">Box 5</div>
-        <div id="box6">Box 6</div>
-        <div id="box7">Box 7</div>
-        <div id="box8">Box 8</div>
-        <div id="box9">Box 9</div>
+        <div id="box1" class="groupBox">Box 1</div>
+        <div id="box2" class="groupBox">Box 2</div>
+        <div id="box3" class="groupBox">Box 3</div>
+        <div id="box4" class="groupBox">Box 4</div>
+        <div id="box5" class="groupBox">Box 5</div>
+        <div id="box6" class="groupBox">Box 6</div>
+        <div id="box7" class="groupBox">Box 7</div>
+        <div id="box8" class="groupBox">Box 8</div>
+        <div id="box9" class="groupBox">Box 9</div>
     </div>
     
     <script src="./script.js"></script>
