--- a/index.html
+++ b/index.html
@@ -9,15 +9,42 @@
 <body>
     <h1 id="header">Drumkit</h1>
     <div id="boxes">
-        <div id="box1" class="groupBox">Box 1</div>
-        <div id="box2" class="groupBox">Box 2</div>
-        <div id="box3" class="groupBox">Box 3</div>
-        <div id="box4" class="groupBox">Box 4</div>
-        <div id="box5" class="groupBox">Box 5</div>
-        <div id="box6" class="groupBox">Box 6</div>
-        <div id="box7" class="groupBox">Box 7</div>
-        <div id="box8" class="groupBox">Box 8</div>
-        <div id="box9" class="groupBox">Box 9</div>
+        <div id="box1" class="groupBox">
+            <p>Boom</p>
+            <p>a</p>
+        </div>
+        <div id="box2" class="groupBox">
+            <p>Clap</p>
+            <p>s</p>
+        </div>
+        <div id="box3" class="groupBox">
+            <p>Hihat</p>
+            <p>d</p>
+        </div>
+        <div id="box4" class="groupBox">
+            <p>Kick</p>
+            <p>f</p>
+        </div>
+        <div id="box5" class="groupBox">
+            <p>Openhat</p>
+            <p>g</p>
+        </div>
+        <div id="box6" class="groupBox">
+            <p>Ride</p>
+            <p>h</p>
+        </div>
+        <div id="box7" class="groupBox">
+            <p>Snare</p>
+            <p>j</p>
+        </div>
+        <div id="box8" class="groupBox">
+            <p>Tink</p>
+            <p>k</p>
+        </div>
+        <div id="box9" class="groupBox">
+            <p>Tom</p>
+            <p>l</p>
+        </div>
     </div>
     
     <script src="./script.js"></script>
